# mpm-optimization

./: CMakeLists.txt  LICENSE.txt  README.md
src/: Interp.hpp  MPM.cpp  MPM.hpp  Particle.hpp  Solver.cpp  Solver.hpp  sphere.cpp
